k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rahul-portfolio
spec:
  replicas: 2

  selector:
    matchLabels:
      app: rahul-portfolio

  template:
    metadata:
      labels:
        app: rahul-portfolio

    spec:

      containers:

        - name: website

          image: rahuldan98/rahul-portfolio:36cf55edca35192d5161ccad40b1a19674ceb4a8

          ports:

            - containerPort: 80

          resources:

            requests:
              cpu: 50m
              memory: 64Mi

            limits:
              cpu: 200m
              memory: 128Mi


---

apiVersion: v1

kind: Service

metadata:
  name: rahul-portfolio

spec:

  selector:
    app: rahul-portfolio

  ports:

    - port: 80
      targetPort: 80

  type: NodePort
