k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rahul-portfolio
  namespace: rahul-portfolio
spec:
  ingressClassName: nginx
  rules:
    - host: rahul-portfolio.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rahul-portfolio
                port:
                  number: 80
